--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>Calculator</title>
   </head>
   <body>
-
+    <div class="container main">
+      <div class="container operators">
+        <button class="operation add">+</button>
+        <button class="operation sub">-</button>
+        <button class="operation mtp">*</button>
+        <button class="operation dvn">/</button>
+      </div>
+      <div class="container numbers">
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="number">0</button>
+      </div>
+    </div>
   </body>
 </html>
