Add display and update display logic
Buttons were nonfunctional, this adds functionality to numbers and clear

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   </head>
   <body>
     <div class="container main">
+      <div class="display"></div>
+      <div class="container extras">
+        <button class="clear">C</button>
+      </div>
       <div class="container operators">
-        <button class="operation add">+</button>
-        <button class="operation sub">-</button>
-        <button class="operation mtp">*</button>
         <button class="operation dvn">/</button>
+        <button class="operation mtp">*</button>
+        <button class="operation sub">-</button>
+        <button class="operation add">+</button>
+        <button class="operation equal">=</button>
       </div>
       <div class="container numbers">
         <button class="number">1</button>
