Add decimal inputs and fixed keydown bug
Keydown bug always changed display to 0 with any keypress

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container main">
-      <div class="display"></div>
+      <div class="display">0</div>
       <div class="container extras">
         <button class="clear">C</button>
       </div>
@@ -31,6 +31,7 @@
         <button class="number">8</button>
         <button class="number">9</button>
         <button class="number">0</button>
+        <button class="dot">.</button>
       </div>
     </div>
   </body>
