--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container main">
       <div class="display">0</div>
       <div class="container extras">
-        <button class="clear">C</button>
+        <button class="clear">Clear</button>
+        <button class="back">Back</button>
       </div>
       <div class="container operators">
         <button class="operation dvn">/</button>
