--- a/index.html
+++ b/index.html
@@ -10,30 +10,35 @@
   <body>
     <div class="container main">
       <div class="display">0</div>
-      <div class="container extras">
-        <button class="clear">Clear</button>
-        <button class="back">Back</button>
+      <div class="container buttons">
+        <div class="container left">
+          <div class="container extras">
+            <button class="clear">Clear</button>
+            <button class="back">Back</button>
+          </div>
+          <div class="container numbers">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="number">0</button>
+            <button class="dot">.</button>
+          </div>
+        </div>
+        <div class="container operators">
+          <button class="operation dvn">/</button>
+          <button class="operation mtp">*</button>
+          <button class="operation sub">-</button>
+          <button class="operation add">+</button>
+          <button class="operation equal">=</button>
+        </div>
       </div>
-      <div class="container operators">
-        <button class="operation dvn">/</button>
-        <button class="operation mtp">*</button>
-        <button class="operation sub">-</button>
-        <button class="operation add">+</button>
-        <button class="operation equal">=</button>
-      </div>
-      <div class="container numbers">
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="number">0</button>
-        <button class="dot">.</button>
-      </div>
+
     </div>
   </body>
 </html>
